Atcoder/ABC過去問/D/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC149D.cpp: In function 'void janken(char)':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC149D.cpp:209:18: error: 'p' was not declared in this scope
  209 |   if(c=='r')ans+=p;
      |                  ^
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC149D.cpp:210:23: error: 'r' was not declared in this scope
  210 |   else if(c=='s')ans+=r;
      |                       ^
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC149D.cpp:211:13: error: 's' was not declared in this scope
  211 |   else ans+=s;
      |             ^
